--- a/todo.txt
+++ b/todo.txt
@@ -9,7 +9,6 @@ Sites :
 (maybe) anything snapped to sites should move along with them when moved or resnapped to closer site when regenerated
 
 Elevation :
-(soon) make elevation easier to see on this mode when there's biomes on it (make biomes less alpha, only on this mode)
 (maybe) use techtonic logic in addition to perlin or double multiplied perlin
 
 Biomes :
@@ -43,8 +42,8 @@ Labels :
 
 Rendering :
 (soon) choosing biomes "pattern" option yields "The file patterns/dots01.png contains bad image data, or may not be an image." while file is seems ok.
-(soon) allow others labels than arbitrary labels
-(soon) water contour lines should have a starting and ending alpha
+(soon) allow paths labels (following paths like street names on maps)
+(soon) allow structure labels (either inside or next to them or disabled depending on space and zoom)
 (soon) path saturation button doesn't work
 (later) elevation lightning could feel more gradient-like or dither-like rather than just unified polygons (find examples of this)
 (later) LOD rules: hide/show groups vs members depending on zoom, optional merging visually of dense structures.
@@ -66,6 +65,7 @@ Rendering :
 (later) water rendering style : many horizontal lines to represent coastlines
 (later) mountain/forest/etc rendering style: use billboarded (mount/trees etc) tiles
 (later) background rendering : noise amount
+(later) push labels so they don't overlap, cache positions
 
 Export :
 (soon) trying to export with labels makes the thing crash with a NullPointerException or IllegalArgumentException: Width (0) and height (0) cannot be <= 0
