--- a/todo.txt
+++ b/todo.txt
@@ -40,10 +40,9 @@ Labels :
 (maybe) have type presets for label styles (like with path types)
 
 Rendering :
-(soon) make biomes "pattern" actually work
-(soon) allow paths labels (following paths like street names on maps)
-(soon) allow structure labels (either inside or next to them or disabled depending on space and zoom)
-(soon) path saturation button doesn't work
+(later) make biomes "pattern" actually work screenspace
+(later) path saturation button doesn't work
+(later) better paths labels
 (later) elevation lightning could feel more gradient-like or dither-like rather than just unified polygons (find examples of this)
 (later) LOD rules: hide/show groups vs members depending on zoom, optional merging visually of dense structures.
 (later) Rendering/exporting the legend for reference.
@@ -65,9 +64,10 @@ Rendering :
 (later) mountain/forest/etc rendering style: use billboarded (mount/trees etc) tiles
 (later) background rendering : noise amount
 (later) push labels so they don't overlap, cache positions
+(later) write labels on top
 
 Export :
-(soon) trying to export with labels makes the thing crash with a NullPointerException or IllegalArgumentException: Width (0) and height (0) cannot be <= 0
+(later) trying to export with labels makes the thing crash with a NullPointerException or IllegalArgumentException: Width (0) and height (0) cannot be <= 0
 (later) Comments (associated with elements in lists) exportable as custom format
 (later) SVG export with layers (background, borders, paths, structures, labels, legend) and data-* / class attributes for type ids.
 (later) are there existing formats for such tools to handle?
