--- a/todo.txt
+++ b/todo.txt
@@ -4,6 +4,7 @@ Mandatory for full first use milestone :
 (later) some ugly dots sometimes appear between polygones
 (later) mountain/forest/etc rendering style: use billboarded (mount/trees etc) tiles
 (later) make sure everything can be bitmap
+(later) join segments (eg water outlines) in a nicer way
 
 Unfinished features :
 (later) Biomes : review "value" sliders
@@ -15,9 +16,9 @@ Bugs :
 (later) path saturation button doesn't work
 (later) write labels on top
 (later) trying to export with labels makes the thing crash with a NullPointerException or IllegalArgumentException: Width (0) and height (0) cannot be <= 0
+(later) some sliders don't work well
 
 Should be easy :
-(later) water rendering style : many horizontal lines to represent coastlines
 (later) are there existing formats for such tools to handle? (at least research)
 (later) write a more consistent readme file
 
