--- a/todo.txt
+++ b/todo.txt
@@ -2,8 +2,7 @@
 Mandatory for full first use milestone :
 (later) paths : taping sometimes wrong (probably needs doubly connected edges and propagation done right)
 (later) some ugly dots sometimes appear between polygones
-(later) labels outline
-(later) labels hierarchy
+(later) better labels (hierarchy, outlines, no blur)
 (later) trying to export with labels makes the thing crash with a NullPointerException or IllegalArgumentException: Width (0) and height (0) cannot be <= 0
 (later) mountain/forest/etc rendering style: use billboarded (mount/trees etc) tiles
 (later) some sliders don't work well
