--- a/todo.txt
+++ b/todo.txt
@@ -1,6 +1,5 @@
 
 Mandatory for full first use milestone :
-(later) paths : taping sometimes wrong (probably needs doubly connected edges and propagation done right)
 (later) some ugly dots sometimes appear between polygones
 (later) trying to export with labels makes the thing crash with a NullPointerException or IllegalArgumentException: Width (0) and height (0) cannot be <= 0
 (later) mountain/forest/etc rendering style: use billboarded (mount/trees etc) tiles
@@ -8,24 +7,25 @@ Mandatory for full first use milestone :
 (later) make sure everything can be bitmap
 
 Other :
-(maybe) Sites : there could be a "subdivide" button that splits each existing site in subregions (eg draws center to edges lines).
-(maybe) Sites : anything snapped to sites should move along with them when moved or resnapped to closer site when regenerated
-(maybe) Elevation : use techtonic logic in addition to perlin or double multiplied perlin
 (later) join segments (eg zones outlines) in a nicer way
 (later) Zones : options to allow overlapping or not (two groups? allowed / not-allowed)
 (later) Zones : use polygon tracing as an alternative to brush
 (later) Paths : refine the way path generation works
 (later) Paths : option to have the color match with water
 (later) Paths : allow invisible (except on paths mode) path type (which means having alpha slider probably)
-(maybe) Paths : width definer similar to water but using pathfinding to define more important roads
 (later) Structures : structures should be groupable
 (later) Structures : shrink big left menu a little
 (later) Structures : crosses (as on treasure maps)
+(later) Export : path rendering slightly differ from their rendering in rendering mode (should be similar)
+(later) Export : rendering shoud look exactly like the picture to be rendered (including points on paths and resolution, this should be cached, use loading bar)
+(later) pictures instead of structs
+(maybe) Sites : there could be a "subdivide" button that splits each existing site in subregions (eg draws center to edges lines).
+(maybe) Sites : anything snapped to sites should move along with them when moved or resnapped to closer site when regenerated
+(maybe) Elevation : use techtonic logic in addition to perlin or double multiplied perlin
+(maybe) Paths : width definer similar to water but using pathfinding to define more important roads
 (maybe) Structures : use polygon tracing as a structure input mode
 (maybe) Labels : optionally associate labels with map elements
 (maybe) Labels : have type presets for label styles (like with path types)
-(later) Export : path rendering slightly differ from their rendering in rendering mode (should be similar)
-(later) Export : rendering shoud look exactly like the picture to be rendered (including points on paths and resolution, this should be cached, use loading bar)
 (maybe) Export : importing from picture
 
 Rendering :
