--- a/todo.txt
+++ b/todo.txt
@@ -1,10 +1,11 @@
 
 Mandatory for full first use milestone :
-(later) some ugly dots sometimes appear between polygones
-(later) trying to export with labels makes the thing crash with a NullPointerException or IllegalArgumentException: Width (0) and height (0) cannot be <= 0
-(later) mountain/forest/etc rendering style: use billboarded (mount/trees etc) tiles
-(later) some sliders don't work well
-(later) make sure everything can be bitmap
+some sliders don't work well
+some ugly dots sometimes appear between polygones
+mountain/forest/etc rendering style: use billboarded (mount/trees etc) tiles
+revise rendering presets
+trying to export with labels makes the thing crash with a NullPointerException or IllegalArgumentException: Width (0) and height (0) cannot be <= 0
+make sure everything can be bitmap
 
 Other :
 (later) join segments (eg zones outlines) in a nicer way
