--- a/todo.txt
+++ b/todo.txt
@@ -1,10 +1,10 @@
 
 Mandatory for full first use milestone :
-some ugly dots sometimes appear between polygones
 mountain/forest/etc rendering style: use billboarded (mount/trees etc) tiles
 revise rendering presets
 trying to export with labels makes the thing crash with a NullPointerException or IllegalArgumentException: Width (0) and height (0) cannot be <= 0
 make sure everything can be bitmap
+export should be same than rendering but with difference sue to ratio visible
 
 Other :
 (later) join segments (eg zones outlines) in a nicer way
