--- a/todo.txt
+++ b/todo.txt
@@ -2,8 +2,8 @@
 Mandatory for full first use milestone :
 mountain/forest/etc rendering style: use billboarded (mount/trees etc) tiles
 revise rendering presets
-trying to export with labels makes the thing crash with a NullPointerException or IllegalArgumentException: Width (0) and height (0) cannot be <= 0
 make sure everything can be bitmap
+loading bars
 export should be same than rendering but with difference sue to ratio visible
 
 Other :
